--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,19 @@
 {
   "rewrites": [
     {
-      "source": "/remotes/:match*",
-      "destination": "/remotes/:match*"
-    },
-    {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/remotes/(.*)\\.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        }
+      ]
     }
   ]
 }
